--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
 
         <!-- Subheading/Recipient Name -->
         <p class="text-3xl md:text-4xl text-green-700 mb-8 font-semibold pacifico-font">
-            To the person with whome I shared a cigaret,<!-- to be changed -->
+            To the person with whome I shared my nights,<!-- to be changed -->
         </p>
 
         <!-- Birthday Message -->
